Feature #48 - Services Add Service Controller (draft).
