# Shop.API/Controllers/ServiceController.cs
@@ -1,0 +1,113 @@
+using Microsoft.AspNetCore.Http;
+using Microsoft.AspNetCore.Mvc;
+using Shop.API.Repositories.Contracts;
+using Shop.Shared.Entities;
+using System;
+using System.Threading.Tasks;
+
+namespace Shop.API.Controllers
+{
+    [Route("api/[controller]")]
+    [ApiController]
+    public class ServiceController : ControllerBase
+    {
+        private readonly IServiceRepository _serviceRepository;
+
+        public ServiceController(IServiceRepository serviceRepository)
+        {
+            _serviceRepository = serviceRepository;
+        }
+
+        [HttpGet]
+        public async Task<IActionResult> GetServices()
+        {
+            try
+            {
+                var services = await _serviceRepository.GetServices();
+                return Ok(services);
+            }
+            catch (Exception ex)
+            {
+                return StatusCode(StatusCodes.Status500InternalServerError, ex.Message);
+            }
+        }
+
+        [HttpGet("{id:int}")]
+        public async Task<IActionResult> GetService(int id)
+        {
+            try
+            {
+                var service = await _serviceRepository.GetService(id);
+                if (service == null) return NotFound();
+
+                return Ok(service);
+            }
+            catch (ArgumentException ex)
+            {
+                return BadRequest(ex.Message);
+            }
+            catch (Exception ex)
+            {
+                return StatusCode(StatusCodes.Status500InternalServerError, ex.Message);
+            }
+        }
+
+        [HttpPut("{id:int}")]
+        public async Task<IActionResult> UpdateService(int id, [FromBody] Service service)
+        {
+            if (id != service.Id) return BadRequest();
+
+            try
+            {
+                service = await _serviceRepository.UpdateService(service);
+                return Ok(service);
+            }
+            catch (ArgumentException ex)
+            {
+                return BadRequest(ex.Message);
+            }
+            catch (Exception ex)
+            {
+                return StatusCode(StatusCodes.Status500InternalServerError, ex.Message);
+            }
+        }
+
+        [HttpDelete("{id:int}")]
+        public async Task<IActionResult> DeleteService(int id)
+        {
+            try
+            {
+                var result = await _serviceRepository.DeleteService(id);
+                if (!result) return NotFound();
+
+                return Ok();
+            }
+            catch (ArgumentException ex)
+            {
+                return BadRequest(ex.Message);
+            }
+            catch (Exception ex)
+            {
+                return StatusCode(StatusCodes.Status500InternalServerError, ex.Message);
+            }
+        }
+
+        [HttpPost]
+        public async Task<IActionResult> AddService([FromBody] Service service)
+        {
+            try
+            {
+                service = await _serviceRepository.AddService(service);
+                return Ok(service);
+            }
+            catch (ArgumentException ex)
+            {
+                return BadRequest(ex.Message);
+            }
+            catch (Exception ex)
+            {
+                return StatusCode(StatusCodes.Status500InternalServerError, ex.Message);
+            }
+        }
+    }
+}
